@@ -5,6 +5,9 @@
     * Require SPVM::Sys 0.524.
     * Require Perl v5.20.3.
     * Remove Test::TCP requirement.
+    * Remove IO 1.55 requirement.
+    * Remove Mojolicious requirement.
+    
   [New Features]
     * Add IO::Socket#accept method. This has existed, but not documented.
     * Add IO::Socket::IP#accept method.
